--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-node_modules
+# build output
+dist/
+
 .serverless
+
+# dependencies
+node_modules/
+
+# environment variables
+.env
+.env.production
+
+.env
+.env.local
+
+undefined
