--- a/serverless.yml
+++ b/serverless.yml
@@ -8,9 +8,43 @@ service: starwars-api
 provider:
   name: aws
   runtime: nodejs20.x
+  region: ${env:AWS_REGION}
+  httpApi:
+    shouldStartNameWithService: true
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource:
+        - arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${env:DYNAMODB_TABLE}
+  environment:
+    DYNAMODB_TABLE: ${env:DYNAMODB_TABLE}
+
+resources:
+  Resources:
+    PeopleTable:
+      Type: "AWS::DynamoDB::Table"
+      Properties:
+        TableName: ${env:DYNAMODB_TABLE}
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 5
+          WriteCapacityUnits: 5
 
 functions:
   api:
-    handler: handler.handler
+    handler: dist/handler.handler
     events:
       - httpApi: "*"
+
+plugins:
+  - serverless-offline
