--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "http-status-codes": "^2.3.0",
     "lodash": "^4.17.21",
     "serverless-http": "^3.2.0",
-    "serverless-offline": "^14.3.2"
+    "serverless-offline": "^14.3.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.10",
